--- a/src/containers/pages/Dashboard/Dashboard.scss
+++ b/src/containers/pages/Dashboard/Dashboard.scss
@@ -61,6 +61,7 @@
             box-shadow: 4px 3px 9px rgba (0, 0, 0.1);
             margin-bottom: 16px;
             transition: all ease 0.35s;
+            position: relative;
             &:hover{
                 cursor: pointer;
                 background: rgba(0, 0, 0, 0.1);
@@ -79,6 +80,19 @@
             .content {
                 margin-top: 20px;
                 font-size: 14px;
+            }
+            .delete-button {
+                padding: 12px 50px;
+                border-radius: 4px;
+                background: maroon;
+                border: 2px solid maroon;
+                color: white;
+                font-size: 14px;
+                font-weight: bold;
+                text-transform: uppercase;
+                &:hover {
+                    cursor: pointer;
+                }
             }
         }
     }
