--- a/src/containers/pages/Dashboard/Dashboard.scss
+++ b/src/containers/pages/Dashboard/Dashboard.scss
@@ -1,3 +1,24 @@
+.header {
+    background-color: black;
+}
+.sub-title {
+    font-size: 18px;
+    font-family: 'Arial';
+    font-style: normal;
+    font-weight: bold;
+}
+.sub-content {
+    font-size: 18px;
+    font-family: 'Arial';
+    font-style: normal;
+    font-weight: bold;
+}
+.list-published{
+    font-size: 18px;
+    font-family: 'Arial';
+    font-style: normal;
+    font-weight: bold;;
+}
 .container {
     max-width: 900px;
     display: block;
@@ -6,23 +27,25 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
+        //align-items: center;
         padding-top: 20px;
         padding-bottom: 20px;
         .input-title {
-            width: 40px;
+            width: 100%;
             background: white;
             border: 1px solid black;
             padding: 12px;
             border-radius: 4px;
             color: gray;
             font-size: 14px;
+            font-family: 'Arial';
+            font-style: normal;
             margin-bottom: 12px;
             box-sizing: border-box;
             outline: none;
         }
         .input-content {
-            width: 40%;
+            width: 100%;
             border: 1px solid black;
             border-radius: 4px;
             box-sizing: border-box;
@@ -30,22 +53,24 @@
             min-height: 200px;
             margin-bottom: 16px;
             font-size: 14px;
+            font-family: 'Arial';
+            font-style: normal;
             color: gray;
             outline: none;
         }
         .upload-btn {
             padding: 12px 50px;
-            border-radius: 4px;
+            border-radius: 50px;
             background: white;
-            border: 2px solid black;
-            color: black;
+            border: 2px solid blue;
+            color: blue;
             font-size: 14px;
             font-weight: bold;
             text-transform: uppercase;
             outline: none;
             &.cancel {
-                border: 2px solid grey;
-                color: grey;
+                border: 2px solid black;
+                color: black;
             }
         }
         .action-wrapper {
@@ -57,6 +82,7 @@
         .card-content {
             border: 1px solid rgba (0, 0, 0, 0.1);
             border-radius: 4px;
+            //border: 10px solid grey;
             padding: 16px;
             box-shadow: 4px 3px 9px rgba (0, 0, 0.1);
             margin-bottom: 16px;
@@ -83,13 +109,16 @@
             }
             .delete-button {
                 padding: 12px 50px;
-                border-radius: 4px;
-                background: maroon;
-                border: 2px solid maroon;
-                color: white;
-                font-size: 14px;
+                border-radius: 50px;
+                background: white;
+                border: 2px solid red;
+                color: red;
+                width: 15px;
+                //text-align: center;
+                font-size: 10px;
                 font-weight: bold;
                 text-transform: uppercase;
+                outline: none;
                 &:hover {
                     cursor: pointer;
                 }
